# hypnofrog

./: .gitignore  setup.cfg
examples/: hyp-d2.py
hypnofrog/: __init__.py
tests/: check_same  crash  helloworld  memory_hog  passthrough  test_hypnofrog.py
