[metadata]
name = hypnofrog
version = 0.1
description = Utilities for property-based testing of competitive programming solutions
license = GPLv3+
author = Bruce Merry
author_email = bmerry@gmail.com
url = https://github.com/bmerry/hypnofrog
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >=3.6
install_requires = hypothesis
